--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,171 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@100;300;400;500;600&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: 'Poppins', sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+  font-family: 'Lato', sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  width: 80%;
+  margin: auto;
+}
+.flex{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+ul{
+  list-style: none;
 }
+a{
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #000;
+}
+button{
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #27ae60;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-weight: bold;
+  color: #fff;
+}
+.btn1 span{
+  margin-right: 5px;
+}
+.heading{
+  text-align: center;
+  width: 60%;
+  margin: auto;
+}
+.heading h1{
+  color: #2f3954;
+  font-weight: 600;
+  font-size: 34px;
+  text-transform: capitalize;
+  margin-bottom: 8px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+}
+.heading p{
+  color:#72809d
+}
+textarea ,input{
+  border: none;
+  outline: none;
+  background-color: none;
+}
+.background{
+  padding: 80px 0;
+  position: relative;
+  background-color: #f7f9fc;
+}
+.grid5{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-gap: 30px;
+}
+label{
+  color: #2d3954;
+  font-size: 14px;
+}
+.mtop{
+  margin-top: 50px;
+}
+h4{
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.shadow{
+  box-shadow: 0 0 15px 0 rgba(147, 152, 161, 0.76);
+}
+.padding{
+  padding: 80px 0;
+}
+.grid3{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 30px;
+}
+img{
+  width: 100%;
+  height: 100%;
+}
+.btn2{
+  border-radius: 50px;
+  font-size: 18px;
+}
+.grid4{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-gap: 30px;
+}
+.btn4{
+  background-color: #000;
+color: #fff;
+}
+.btn5{
+  border-radius: 50px;
+  padding: 10px 20px;
+  color: #27ae60;
+  font-size: 20px;
+  font-weight: 400;
+  border: 5px solid #27ae601f;
+  background: #fff;
+}
+.back{
+  height: 40vh;
+  position: relative;
+}
+.back img{
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  object-fit: cover;
+}
+.back::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(17, 40, 72, 0.629);
+  z-index: -1;
+}
+.back .container{
+  color: #fff;
+  padding: 120px 0;
+}
+.back h1{
+  font-size: 40px;
+  font-weight: 500;
+}
+.mb{
+  margin-bottom: 80px;
+}
+@media screen and (max-width:768px){
+  .grid3,
+  .grid4,
+  .grid5{
+    grid-template-columns: repeat(1,1fr);
   }
-  to {
-    transform: rotate(360deg);
+  .heading{
+    width: 100%;
+  }
+  .container{
+    max-width: 90%;
+  }
+  .badck,.back::after,.back img{
+    height: 30vh;
   }
 }
